--- a/bootcamp_app/package.json
+++ b/bootcamp_app/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "pg": "^8.4.1",
+    "pq": "0.0.3"
+  }
 }
